--- a/src/app/teachers/teachers.page.html
+++ b/src/app/teachers/teachers.page.html
@@ -5,9 +5,9 @@
     </ion-buttons>
 
     <ion-buttons slot="end">
-      <ion-button (click)="logout()">
+      <!-- <ion-button (click)="logout()">
         <ion-icon slot="end" name="exit"></ion-icon>
-      </ion-button>
+      </ion-button> -->
 
       <ion-button (click)="add()">
         <ion-icon slot="start" name="add-circle"></ion-icon>
@@ -27,7 +27,5 @@
 
   <ion-item *ngFor="let teacher of data" (click)="openDetail(teacher.id)">
       <ion-label>{{teacher.nome}}</ion-label> 
-      <ion-icon slot="end" name="create"></ion-icon>   
-      <ion-icon slot="end" name="close-circle" color="red"></ion-icon>   
   </ion-item>
 </ion-content>
