--- a/src/app/public/login/login.page.html
+++ b/src/app/public/login/login.page.html
@@ -12,7 +12,7 @@
         Login
     </ion-button>
 
-    <ion-button color="light" expand="block" size="small">
+    <ion-button color="light" expand="block" size="small" (click)="forgot()">
         Forgot Password?
     </ion-button>
 
