--- a/src/app/settings/settings.page.html
+++ b/src/app/settings/settings.page.html
@@ -1,8 +1,13 @@
 <ion-header>
-  <ion-toolbar>
-    <ion-title>Settings</ion-title>
-  </ion-toolbar>
-</ion-header>
+    <ion-toolbar color="dark">
+      <ion-title>Settings</ion-title>
+  
+      <ion-buttons slot="start">
+        <ion-back-button></ion-back-button>
+      </ion-buttons>
+    </ion-toolbar>
+  </ion-header>
+  
 
 <ion-content padding>
 
