--- a/src/app/settings/settings.page.html
+++ b/src/app/settings/settings.page.html
@@ -1,14 +1,34 @@
 <ion-header>
-    <ion-toolbar color="dark">
-      <ion-title>Settings</ion-title>
-  
-      <ion-buttons slot="start">
-        <ion-back-button></ion-back-button>
-      </ion-buttons>
-    </ion-toolbar>
-  </ion-header>
+  <ion-toolbar color="dark">
+    <ion-title>Settings</ion-title>
+
+    <ion-buttons slot="start">
+      <ion-button (click)="goToList()">
+        <ion-icon slot="start" name="arrow-round-back"></ion-icon>
+      </ion-button>
+    </ion-buttons>
+  </ion-toolbar>
+</ion-header>
   
 
 <ion-content padding>
+  <ion-item>
+    <ion-label>Language:</ion-label>
+    <ion-select placeholder="Select Language" [(ngModel)]="language">
+      <ion-select-option value="en">(EN) English</ion-select-option>
+      <ion-select-option value="pt-br">(PT-BR) Português</ion-select-option>
+    </ion-select>    
+  </ion-item>
+
+  <ion-item>
+    <ion-label>User Name:</ion-label>
+    <ion-input name="username" id="username" type="text" placeholder="Enter a User Name" [(ngModel)]="name"></ion-input>
+  </ion-item>
+
+  <ion-item lines="none">
+    <ion-button (click)="save()">
+      Save Settings
+    </ion-button>
+  </ion-item>
 
 </ion-content>
